--- a/projects.conf
+++ b/projects.conf
@@ -1,20 +1,28 @@
 server {
 
-    listen 88;
-    server_name docker_flask_gunicorn_nginx;
+    listen 80;
+    server_name nginx_reverse_proxy;
+    
 
     location / {
         alias /var/www/;
         index /landing-page/index.html;
     }
 
-
     location /flaskblog {
         proxy_pass http://flask_app:8000/flaskblog/;
 
     }
 
+    # location /static {
+	#     alias /python-flask/flaskblog/static;
+    # }
+
+    location /airsense {
+        proxy_pass http://aq_nginx:88;
+    }
+
     location /static {
-	alias /python-flask/flaskblog/static;
+	    proxy_pass http://aq_nginx:88;
     }
 }
